DOC/FIX Menu lists nowrap
This refs #76

pylint score: 10.00
test score: A 64/0 F 11/0 R 100.0%

--- a/doc/bot.css
+++ b/doc/bot.css
@@ -23,8 +23,9 @@ ul.flat li:first-child::before {
 }
 
 ul.flat li {
-  display: inline;
+  display: inline-block;
   list-style-type: none;
+  white-space: nowrap;
 }
 
 ul.flat li.containsul::before {
